--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -57,3 +57,15 @@
     border-bottom: 1px solid #202020;
     padding-bottom: 1em;
 }
+
+@media screen and (min-width: 380px) and (max-width: 540px) {
+    .modal {
+        width: 20em;
+    }
+}
+
+@media screen and (min-width: 250px) and (max-width: 380px) {
+    .modal {
+        width: 15em;
+    }
+}
